--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -232,14 +232,14 @@ jobs:
           cache_path: |
             ~/.deno
             ~/.cache/deno
-        # - os: macos-latest
-        #   url: ${{ needs.build-binaries.outputs.public-url-macos }}
-        #   final-name: taq
-        #   make-executable-cmd: chmod +x
-        #   get-current-dir: echo "$(pwd)"
-        #   cache_path: |
-        #     ~/.deno
-        #     ~/Library/Caches/deno
+        - os: macos-latest
+          url: ${{ needs.build-binaries.outputs.public-url-macos }}
+          final-name: taq
+          make-executable-cmd: chmod +x
+          get-current-dir: echo "$(pwd)"
+          cache_path: |
+            ~/.deno
+            ~/Library/Caches/deno
 
     env:
       UNLIMITED_PINATA_TOKEN: ${{ secrets.PINATA_JWT_TOKEN }}
