--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -170,7 +170,7 @@
 			{
 				"view": "taqueria-system-check",
 				"when": "!@taqueria-state/is-taq-cli-reachable",
-				"contents": "❌ Taq CLI: Your system does not have the taq command installed.\nYou must download the taq program and put it in your system, Click [here](https://taqueria.io/docs/getting-started/installation/) for installation instructions.\nIf you prefer, the Taqueria extension can install it for you, to do this, please click the button below, you will be prompted for your password.:\n[Install Taq CLI](command:taqueria.install_taq_cli)\nAfter taqueria is installed, please click the \"Check Again\" button."
+				"contents": "❌ Taq CLI:\nYour system does not have the taq command installed.\nYou must download the taq program and put it in your system. Click [here](https://taqueria.io/docs/getting-started/installation/) for installation instructions.\nIf you prefer, the Taqueria extension can install it for you. To do this, please click the button below, you will be prompted for your password\n[Install Taq CLI](command:taqueria.install_taq_cli)\nAfter taq command is installed, please click the \"Check Again\" button."
 			},
 			{
 				"view": "taqueria-system-check",
