--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -130,12 +130,6 @@ jobs:
         with:
           deno-version: "1.23.4"
 
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: ./node_modules/**
-          key: cache-node-modules-${{ github.run_id }}
-
       ## This job will compile the binary for the target OS. The binary is then tested by initializing a project called "test_project"
       ## If the initialization command output is equal to "Project taq'ified!" we know that the binary works for the given os, else the command exits with status code 1.
       - name: Build the binary for ${{ matrix.os }}
@@ -317,7 +311,7 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.E2E_MONITORING_SLACK }} # required
 
-  build-and-publish-npm-packages:
+  publish-npm-packages:
     runs-on: ubuntu-latest
     needs:
       - run-tests
