--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -351,7 +351,7 @@ jobs:
   vscode-extension-workflow:
     needs: 
       - detect-changes
-      - build-and-publish-npm-packages
+      - publish-npm-packages
 
     if: ${{ (needs.detect-changes.outputs.vscode == 'true' || 
             github.event_name == 'release' || 
@@ -372,6 +372,7 @@ jobs:
             !github.event.pull_request.head.repo.fork }}
     needs: 
       - build-binaries
+      - publish-npm-packages
       - vscode-extension-workflow
     steps:
       - uses: actions/checkout@v3
@@ -462,6 +463,7 @@ jobs:
     needs:
       - detect-minor-version
       - build-binaries
+      - publish-npm-packages
       - vscode-extension-workflow
     if: ${{ startsWith(github.ref, 'refs/tags/v') &&
             !github.event.pull_request.head.repo.fork }}
