--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -38,10 +38,10 @@ jobs:
       vsixGcsUrl: ${{ steps.publicUrl.outputs.vsixGcsUrl }}
     steps:
       - name: Checkout Source
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       
       - name: Install Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
           node-version: 16.16.x
 
@@ -53,16 +53,13 @@ jobs:
       - name: Attempt to rebuild
         run: npm rebuild | true
       
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: ./node_modules/**
-          key: cache-node-modules-${{ github.run_id }}
+      - name: Install Dependencies
+        run: npm ci
 
-      - name: Add working dir to PATH
+      - name: Compile packages
         run: |
-          npm ci
           echo "$(pwd)" >> $GITHUB_PATH
+          npm run build-all
       
       - name: Compile TS
         run: npm run compile:test --workspace ${{ env.GIT_WORKSPACE }}
@@ -108,16 +105,16 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: 16.16.x
 
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: ./node_modules/**
-          key: cache-node-modules-${{ github.run_id }}
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Compile packages
+        run: npm run build-all
       
       - name: Compile TS
         run: npm run compile --workspace ${{ env.GIT_WORKSPACE }}
