--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -211,8 +211,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        # os: [ubuntu-latest, macos-latest]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest]
         chunk-ids: ${{ fromJson(needs.gather-info-for-e2e-tests.outputs['test-chunk-ids']) }}
         include:
         - os: ubuntu-latest
@@ -223,14 +222,14 @@ jobs:
           cache_path: |
             ~/.deno
             ~/.cache/deno
-        # - os: macos-latest
-        #   url: ${{ needs.build-binaries.outputs.public-url-macos }}
-        #   final-name: taq
-        #   make-executable-cmd: chmod +x
-        #   get-current-dir: echo "$(pwd)"
-        #   cache_path: |
-        #     ~/.deno
-        #     ~/Library/Caches/deno
+        - os: macos-latest
+          url: ${{ needs.build-binaries.outputs.public-url-macos }}
+          final-name: taq
+          make-executable-cmd: chmod +x
+          get-current-dir: echo "$(pwd)"
+          cache_path: |
+            ~/.deno
+            ~/Library/Caches/deno
 
     env:
       UNLIMITED_PINATA_TOKEN: ${{ secrets.PINATA_JWT_TOKEN }}
