--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ concurrency:
   group: ${{ github.ref_name || github.ref }}
   cancel-in-progress: true
 
+env:
+  TAQ_VERSION: ${{ github.ref_name }}
+
 jobs:
   # When we use reusable we lose the ability to to filter out the workflow for changes to certain paths.
   # This job creates boolean outputs based on path filters. These outputs can then be used as job conditions
@@ -48,24 +51,24 @@ jobs:
       id: get-version
       uses: battila7/get-version-action@v2
 
-    - name: Setup Deno
-      uses: denoland/setup-deno@v1
-      with:
-        deno-version: "1.23.4"
+    # - name: Setup Deno
+    #   uses: denoland/setup-deno@v1
+    #   with:
+    #     deno-version: "1.23.4"
 
-    - name: Build all
-      run: |
-        export PATH="$PATH:$(pwd)"
-        npx lerna bootstrap 
-        npm run build:packages 
-        npm run build:binary 
-        npm run build:docker
+    # - name: Build all
+    #   run: |
+    #     npx lerna bootstrap 
+    #     npm run build:packages 
+    #     npm run build:binary 
+    #     npm run build:docker
 
-    - name: cache node modules
-      uses: actions/cache@v3
-      with:
-        path: ./node_modules/**
-        key: cache-node-modules-${{ github.run_id }}
+      # - name: Cache node modules
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: ./node_modules/**
+      #     key: cache-node-modules-${{ github.run_id }}
+      # COMMENT FOR TESTS
 
   build-binaries:
     name: Build Taqueria binaries
@@ -116,7 +119,6 @@ jobs:
         id: build-bin
         shell: bash
         env:
-          TAQ_VERSION: ${{ github.ref_name }}
           DENO_DIR: "./deno"
         run: |
           BUILD=`git rev-parse --short "$GITHUB_SHA"`
@@ -187,30 +189,22 @@ jobs:
           CHUNKS: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
 
   run-tests:
-    name: OS ${{ matrix.os }} test chunk ${{ matrix.chunk-ids }}
+    name: OS ${{ matrix.os }} tests
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        chunk-ids: ${{ fromJson(needs.gather-info-for-e2e-tests.outputs['test-chunk-ids']) }}
+        os: [ubuntu-latest, ecad-macmini]
         include:
         - os: ubuntu-latest
           url: ${{ needs.build-binaries.outputs.public-url-ubuntu }}
           final-name: taq
           make-executable-cmd: chmod +x
           get-current-dir: echo "$(pwd)"
-          cache_path: |
-            ~/.deno
-            ~/.cache/deno
-        - os: macos-latest
+        - os: ecad-macmini
           url: ${{ needs.build-binaries.outputs.public-url-macos }}
           final-name: taq
           make-executable-cmd: chmod +x
           get-current-dir: echo "$(pwd)"
-          cache_path: |
-            ~/.deno
-            ~/Library/Caches/deno
 
     env:
       UNLIMITED_PINATA_TOKEN: ${{ secrets.PINATA_JWT_TOKEN }}
@@ -219,7 +213,7 @@ jobs:
     needs:
       - build-binaries
       - gather-info-for-e2e-tests
-    if: ${{ always() && !(contains(needs.*.result, 'failure')) && github.event_name != 'release' && !(startsWith(github.ref, 'refs/tags/v')) }}
+    if: ${{ github.event_name != 'release' && !(startsWith(github.ref, 'refs/tags/v')) }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -231,41 +225,18 @@ jobs:
         with:
           deno-version: "1.23.4"
 
-      - name: setup-docker
-        if: runner.os == 'macOS'
-        run: |
-          brew install docker
-          brew install colima
-          colima start
+      - name: Add working dir to PATH
+        run: echo "$(pwd)" >> $GITHUB_PATH
 
-      - name: Cache node modules
-        uses: actions/cache@v3
-        with:
-          path: ./node_modules/**
-          key: cache-node-modules-${{ github.run_id }}
-
-      - name: download the binary from the build-binaries job and make it executable
-        if: ${{ !github.event.pull_request.head.repo.fork }}
+      - name: Build all
         run: |
-          curl --url ${{ matrix.url }} -o ${{ matrix.final-name }} -L
-          ${{ matrix.make-executable-cmd }} ${{ matrix.final-name }}
-          ${{ matrix.get-current-dir }} >> $GITHUB_PATH
-
-      - name: build binary and make executable
-        if: ${{ github.event.pull_request.head.repo.fork }}
-        env:
-          TAQ_VERSION: ${{ github.ref_name }}
-          DENO_DIR: "./deno"
-        run: |
-          COMMIT=`git rev-parse --short "$GITHUB_SHA"`
+          BUILD=`git rev-parse --short "$GITHUB_SHA"`
           TAQ_VERSION="${TAQ_VERSION/\//-}"
-          deno compile --output taq --target $DENO_TARGET --allow-run --allow-write --allow-read --allow-env --allow-net index.ts --setBuild "$COMMIT" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
-          [[ $(./taq init -p ./test_project) == "Project taq'ified!" ]]
-          chmod +x taq
-          echo "$(pwd)" >> $GITHUB_PATH
-
-      - name: Build docker image
-        run: npm run build-docker --workspaces --if-present
+          npx lerna bootstrap 
+          npm run build:packages 
+          deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt index.ts --quickstart "`cat quickstart.md`" --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
+          npm run build:docker
+# Comment to run tests
 
       - name: Run unit tests
         run: npm run test:unit -w tests
@@ -274,9 +245,7 @@ jobs:
         run: npm run test:integration -w tests
 
       - name: Run e2e tests
-        run: npm run test:e2e -w tests ${{ fromJSON(env.CHUNKS)[matrix.chunk-ids] }}
-        env:
-          CHUNKS: ${{ needs.gather-info-for-e2e-tests.outputs['test-chunks-formatted'] }}
+        run: npm run test:e2e -w tests
 
   report-e2e-status:
     needs: run-tests
@@ -315,11 +284,28 @@ jobs:
           node-version: lts/gallium
           cache: "npm"
 
-      - name: Cache node modules
-        uses: actions/cache@v3
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1
         with:
-          path: ./node_modules/**
-          key: cache-node-modules-${{ github.run_id }}
+          deno-version: "1.23.4"
+
+      - name: Add working dir to PATH
+        run: echo "$(pwd)" >> $GITHUB_PATH
+
+      - name: Build all
+        run: |
+          BUILD=`git rev-parse --short "$GITHUB_SHA"`
+          TAQ_VERSION="${TAQ_VERSION/\//-}"
+          npx lerna bootstrap 
+          npm run build:packages 
+          deno compile --output taq --allow-run --allow-write --allow-read --allow-env --allow-net --import-map ./import_map.json --no-prompt index.ts --quickstart "`cat quickstart.md`" --setBuild "$BUILD" --setVersion "$TAQ_VERSION" --lock ./deno-lock.json
+          npm run build:docker
+
+      # - name: Cache node modules
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: ./node_modules/**
+      #     key: cache-node-modules-${{ github.run_id }}
 
       - name: Publish for PR
         if:  ${{ github.event_name == 'pull_request' }}
