--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,7 @@ jobs:
       contents: 'read'
       id-token: 'write'
     runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.continue-on-error }}
     if: ${{ github.event_name != 'release' && !github.event.pull_request.head.repo.fork }}
     needs:
       - workflow-setup
@@ -68,14 +69,17 @@ jobs:
            os_short: ubuntu
            deno_target: "x86_64-unknown-linux-gnu"
            taqueria_bin: "taq"
+           continue-on-error: false
          - os: windows-latest
            os_short: windows
            deno_target: "x86_64-pc-windows-msvc"
            taqueria_bin: "taq.exe"
+           continue-on-error: true
          - os: macOS-latest
            os_short: macos
            deno_target: "x86_64-apple-darwin"
            taqueria_bin: "taq"
+           continue-on-error: false
 
     outputs:
       public-url-ubuntu: ${{ steps.public-url.outputs.ubuntu }}
