--- a/taqueria-plugin-tezos-client/package.json
+++ b/taqueria-plugin-tezos-client/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-tezos-client",
-	"version": "0.24.2",
+	"version": "0.25.0-alpha",
 	"description": "A taqueria plugin for utilizing tezos-client",
 	"targets": {
 		"default": {
@@ -41,7 +41,7 @@
 	},
 	"homepage": "https://github.com/ecadlabs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.24.2",
+		"@taqueria/node-sdk": "^0.25.0-alpha",
 		"fast-glob": "^3.2.7"
 	},
 	"devDependencies": {
