--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -299,12 +299,18 @@ jobs:
           echo "::set-output name=pr-version::$PR_VERSION"
           npx lerna version "${PR_VERSION}" --no-push --no-git-tag-version --yes
           npm publish --workspaces --no-private --registry $PRIVATE_NPM_REGISTRY
-
-      - name: Publish for prerelease
-        if: ${{ needs.workflow-setup.outputs.prerelease }}
+ 
+      - name: Publish for Alpha prerelease
+        if: ${{ startsWith(needs.workflow-setup.outputs.prerelease, "alpha" }}
         run: |
           echo ${NODE_AUTH_TOKEN} >> ~/.npmrc
-          npm publish --workspaces --tag 'next' --access public --registry $NPM_REGISTRY
+          npm publish --workspaces --tag 'preview' --access public --registry $NPM_REGISTRY
+
+      - name: Publish for RC release
+        if: ${{ startsWith(needs.workflow-setup.outputs.prerelease, "rc" }}
+        run: |
+          echo ${NODE_AUTH_TOKEN} >> ~/.npmrc
+          npm publish  --workspaces --tag 'next' --access public --registry $NPM_REGISTRY
       
       - name: Publish for official release
         if: ${{ !needs.workflow-setup.outputs.prerelease && !github.event.release.prerelease && github.event.action == 'published' }}
