--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -206,6 +206,8 @@ jobs:
       - name: Add working dir to PATH
         run: echo "$(pwd)" >> $GITHUB_PATH
 
+      - run: npm ci
+
       - name: Build all
         run: |
           npm run build:packages 
@@ -266,6 +268,8 @@ jobs:
 
       - name: Add working dir to PATH
         run: echo "$(pwd)" >> $GITHUB_PATH
+
+      - run: npm ci
 
       - name: Build all
         run: |
